[package]
name = "iap_proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = "6.1.0"
dotenvy = "0.15.7"
httparse = "1.10.1"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros"] }
